2.ordersystem/k8s/depl_svc.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ordersystem-deployment
  namespace: jw-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-ordersystem
  template:
    metadata:
      labels:
        app: my-ordersystem
    spec:
      containers:
      - name: my-ordersystem
        image: 346903264902.dkr.ecr.ap-northeast-2.amazonaws.com/jw-ns/ordermsa:latest
        ports:
        - containerPort: 8080
        resources:
        # 컨테이너가 사용할수 있는 리소스의 최대치
          limits:
            cpu: "1"
            memory: "500Mi"
        # 컨테이너가 시작될때 보장받아야 하는 최소 자원
          requests:
            cpu: "0.5"
            memory: "250Mi"
        readinessProbe:
          httpGet:
            # healthcheck 경로
            path: /health
            port: 8080
          # 컨테이너 시작 후 지연
          initialDelaySeconds: 10
          # 확인 반복 주기
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: my-service
  namespace: jw-ns
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: my-ordersystem
