2.ordersystem/k8s/ingress.yml
# ingress-controller 설치 명령어
# kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.8.1/deploy/static/provider/aws/deploy.yaml
# aws lb -> ingress controller pod -> ingress -> service로의 라우팅

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ordersystem-ingress
  namespace: jw-ns
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
  - hosts:
    - "server.pochaon.store"
    secretName: server-pochaon-store-tls
  rules:
    - host: server.pochaon.store
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-service
                port:
                  number: 80
        # - path: /bradkim2/ #bradkim2으로 시작하는 모든 url요청을 my-service2로 라우팅한다는 정규표현식
        #   pathType: Prefix
        #   backend:
        #     service:
        #       name: my-service2
        #       port:
        #         number: 80
